api refinements for multiple jobs

--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -43,7 +43,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_vector = [1,2,3,4]"
+    "input_vector = [ { 'x' : 0 },\n",
+    "                 { 'x' : 1 },\n",
+    "                 { 'x' : 2 },\n",
+    "                 { 'x' : 3 },\n",
+    "                 { 'x' : 4 },\n",
+    "                 { 'x' : 5 },\n",
+    "                 { 'x' : 6 },\n",
+    "                 { 'x' : 7 },\n",
+    "                 { 'x' : 8 } ]"
    ]
   },
   {
@@ -52,9 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%moan -n 5 -i input_vector -o x\n",
+    "%%moan --label foo -n 5 -i input_vector -o y\n",
     "\n",
-    "x = sum( input_vector )"
+    "y = x**2"
    ]
   },
   {
@@ -65,7 +73,15 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "[{'y': 0},\n",
+       " {'y': 1},\n",
+       " {'y': 4},\n",
+       " {'y': 9},\n",
+       " {'y': 16},\n",
+       " {'y': 25},\n",
+       " {'y': 36},\n",
+       " {'y': 49},\n",
+       " {'y': 64}]"
       ]
      },
      "execution_count": 5,
@@ -74,11 +90,15 @@
     }
    ],
    "source": [
-    "# this doesn't look interesting, but the value x is\n",
-    "# computed outside the kernel\n",
-    "\n",
-    "x"
+    "foo_output"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
