--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -63,55 +63,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "executing in local serial mode...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Namespace(cpus=5, debug=True, label='foo', mode='local_serial', output=['y,index,pid'], params='run_args')\n",
-      "user_input : [{'index': 0, 'x': 10}, {'index': 1, 'x': 11}, {'index': 2, 'x': 23}, {'index': 3, 'x': 34}, {'index': 4, 'x': 13}, {'index': 5, 'x': 55}, {'index': 6, 'x': 73}, {'index': 7, 'x': 21}, {'index': 8, 'x': 18}]\n",
-      "input_params : [{'index': b'\\x80\\x03K\\x00.'}, {'x': b'\\x80\\x03K\\n.'}, {'index': b'\\x80\\x03K\\x01.'}, {'x': b'\\x80\\x03K\\x0b.'}, {'index': b'\\x80\\x03K\\x02.'}, {'x': b'\\x80\\x03K\\x17.'}, {'index': b'\\x80\\x03K\\x03.'}, {'x': b'\\x80\\x03K\".'}, {'index': b'\\x80\\x03K\\x04.'}, {'x': b'\\x80\\x03K\\r.'}, {'index': b'\\x80\\x03K\\x05.'}, {'x': b'\\x80\\x03K7.'}, {'index': b'\\x80\\x03K\\x06.'}, {'x': b'\\x80\\x03KI.'}, {'index': b'\\x80\\x03K\\x07.'}, {'x': b'\\x80\\x03K\\x15.'}, {'index': b'\\x80\\x03K\\x08.'}, {'x': b'\\x80\\x03K\\x12.'}]\n",
-      "output : {'vars': ['y', 'index', 'pid'], 'pickle': '/tmp/tmpg4hg62io.output'}\n",
-      "modules : {'json'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "0% [#                 ] 100% | ETA: 00:00:00"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stdout 0 : b''\n",
-      "stderr 0 : b'Traceback (most recent call last):\\n  File \"/tmp/tmpi9tnhr80.cell\", line 14, in <module>\\n    y = x**2\\nNameError: name \\'x\\' is not defined\\n'\n"
-     ]
-    },
-    {
-     "ename": "EOFError",
-     "evalue": "Ran out of input",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-33c1da043ae4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'moan'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'--label foo -n 5 -i run_args -o y,index,pid --debug True'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'import os\\n\\ny = x**2\\npid = os.getpid()'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/opt3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2165\u001b[0m             \u001b[0mmagic_arg_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvar_expand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2166\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2167\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2168\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2169\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<decorator-gen-125>\u001b[0m in \u001b[0;36mmoan\u001b[0;34m(self, line, cell)\u001b[0m\n",
-      "\u001b[0;32m~/opt3/lib/python3.6/site-packages/IPython/core/magic.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(f, *a, **k)\u001b[0m\n\u001b[1;32m    185\u001b[0m     \u001b[0;31m# but it's overkill for just that one bit of state.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmagic_deco\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m         \u001b[0mcall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Projects/SummonUndead/SummonUndead.py\u001b[0m in \u001b[0;36mmoan\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    110\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'local_serial'\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m             output_vector = self._execute_local_serial(   cell, input_params, output, modules, None,\n\u001b[0;32m--> 112\u001b[0;31m                                                           debug=args.debug )\n\u001b[0m\u001b[1;32m    113\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'local_parallel'\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m             output_vector = self._execute_local_parallel( cell, input_params, output, modules, None,\n",
-      "\u001b[0;32m~/Projects/SummonUndead/SummonUndead.py\u001b[0m in \u001b[0;36m_execute_local_serial\u001b[0;34m(self, cell_code, params, output, modules, cpus, debug)\u001b[0m\n\u001b[1;32m    156\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m'stderr {} :'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 158\u001b[0;31m             \u001b[0mrun_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pickle'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    159\u001b[0m             \u001b[0moutput_vector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mrun_output\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
+      "executing in local serial mode...\n",
+      "0% [#########] 100% | ETA: 00:00:00\n",
+      "Total time elapsed: 00:00:00\n"
      ]
     }
    ],
    "source": [
-    "%%moan --label foo -n 5 -i run_args -o y,index,pid --debug True\n",
+    "%%moan --label foo -n 5 -i run_args -o y,index,pid --mode local_serial\n",
     "import os\n",
     "\n",
     "y = x**2\n",
@@ -120,38 +79,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'y': 100, 'index': 0, 'pid': 27220},\n",
+       " {'y': 121, 'index': 1, 'pid': 27221},\n",
+       " {'y': 529, 'index': 2, 'pid': 27222},\n",
+       " {'y': 1156, 'index': 3, 'pid': 27223},\n",
+       " {'y': 169, 'index': 4, 'pid': 27224},\n",
+       " {'y': 3025, 'index': 5, 'pid': 27225},\n",
+       " {'y': 5329, 'index': 6, 'pid': 27226},\n",
+       " {'y': 441, 'index': 7, 'pid': 27227},\n",
+       " {'y': 324, 'index': 8, 'pid': 27228}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#foo_output\n",
-    "run_args"
+    "foo_output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyprind \n",
-    "import time\n",
+    "%%moan --label bar -n 5 -i run_args -o y,index,pid --mode local_parallel\n",
+    "import os\n",
     "\n",
-    "p1 = pyprind.ProgBar( 100 )\n",
-    "p2 = pyprind.ProgBar( 100 )\n",
-    "\n",
-    "for i in range( 100 ) :\n",
-    "    p1.update()\n",
-    "    p2.update()\n",
-    "    time.sleep( 0.01 )"
+    "y = x**2\n",
+    "pid = os.getpid()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'y': 100, 'index': 0, 'pid': 27229},\n",
+       " {'y': 121, 'index': 1, 'pid': 27230},\n",
+       " {'y': 529, 'index': 2, 'pid': 27231},\n",
+       " {'y': 1156, 'index': 3, 'pid': 27232},\n",
+       " {'y': 169, 'index': 4, 'pid': 27233},\n",
+       " {'y': 3025, 'index': 5, 'pid': 27234},\n",
+       " {'y': 5329, 'index': 6, 'pid': 27235},\n",
+       " {'y': 441, 'index': 7, 'pid': 27236},\n",
+       " {'y': 324, 'index': 8, 'pid': 27237}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bar_output"
+   ]
   }
  ],
  "metadata": {
