local_parallel mode seems to be working now

--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -60,19 +60,33 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e7e03f15ae8a45a9a2c5cbf84582c471",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=9), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "executing in local serial mode...\n",
-      "0% [#########] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:00:00\n"
+      "\n"
      ]
     }
    ],
    "source": [
     "%%moan --label foo -n 5 -i run_args -o y,index,pid --mode local_serial\n",
     "import os\n",
+    "import time\n",
     "\n",
+    "time.sleep(.5)\n",
     "y = x**2\n",
     "pid = os.getpid()"
    ]
@@ -85,15 +99,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 27220},\n",
-       " {'y': 121, 'index': 1, 'pid': 27221},\n",
-       " {'y': 529, 'index': 2, 'pid': 27222},\n",
-       " {'y': 1156, 'index': 3, 'pid': 27223},\n",
-       " {'y': 169, 'index': 4, 'pid': 27224},\n",
-       " {'y': 3025, 'index': 5, 'pid': 27225},\n",
-       " {'y': 5329, 'index': 6, 'pid': 27226},\n",
-       " {'y': 441, 'index': 7, 'pid': 27227},\n",
-       " {'y': 324, 'index': 8, 'pid': 27228}]"
+       "[{'y': 100, 'index': 0, 'pid': 11697},\n",
+       " {'y': 121, 'index': 1, 'pid': 11698},\n",
+       " {'y': 529, 'index': 2, 'pid': 11700},\n",
+       " {'y': 1156, 'index': 3, 'pid': 11701},\n",
+       " {'y': 169, 'index': 4, 'pid': 11702},\n",
+       " {'y': 3025, 'index': 5, 'pid': 11703},\n",
+       " {'y': 5329, 'index': 6, 'pid': 11704},\n",
+       " {'y': 441, 'index': 7, 'pid': 11705},\n",
+       " {'y': 324, 'index': 8, 'pid': 11706}]"
       ]
      },
      "execution_count": 5,
@@ -109,11 +123,35 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "80bceb06150f466d9120d13cfd51ff6a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=9), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "%%moan --label bar -n 5 -i run_args -o y,index,pid --mode local_parallel\n",
+    "%%moan --label bar -n 4 -i run_args -o y,index,pid --mode local_parallel\n",
     "import os\n",
+    "import time\n",
     "\n",
+    "time.sleep(.5)\n",
     "y = x**2\n",
     "pid = os.getpid()"
    ]
@@ -126,15 +164,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 27229},\n",
-       " {'y': 121, 'index': 1, 'pid': 27230},\n",
-       " {'y': 529, 'index': 2, 'pid': 27231},\n",
-       " {'y': 1156, 'index': 3, 'pid': 27232},\n",
-       " {'y': 169, 'index': 4, 'pid': 27233},\n",
-       " {'y': 3025, 'index': 5, 'pid': 27234},\n",
-       " {'y': 5329, 'index': 6, 'pid': 27235},\n",
-       " {'y': 441, 'index': 7, 'pid': 27236},\n",
-       " {'y': 324, 'index': 8, 'pid': 27237}]"
+       "[{'y': 100, 'index': 0, 'pid': 11747},\n",
+       " {'y': 121, 'index': 1, 'pid': 11750},\n",
+       " {'y': 529, 'index': 2, 'pid': 11751},\n",
+       " {'y': 1156, 'index': 3, 'pid': 11752},\n",
+       " {'y': 169, 'index': 4, 'pid': 11753},\n",
+       " {'y': 3025, 'index': 5, 'pid': 11754},\n",
+       " {'y': 5329, 'index': 6, 'pid': 11755},\n",
+       " {'y': 441, 'index': 7, 'pid': 11756},\n",
+       " {'y': 324, 'index': 8, 'pid': 11757}]"
       ]
      },
      "execution_count": 7,
