(extremely basic) slurm execution works!

--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4cb747c5f924c00ba288f3d59dcbee0",
+       "model_id": "891bc6b1de634f35b7b25f9f01d2ed69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,15 +99,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 9124},\n",
-       " {'y': 121, 'index': 1, 'pid': 9125},\n",
-       " {'y': 529, 'index': 2, 'pid': 9126},\n",
-       " {'y': 1156, 'index': 3, 'pid': 9127},\n",
-       " {'y': 169, 'index': 4, 'pid': 9128},\n",
-       " {'y': 3025, 'index': 5, 'pid': 9129},\n",
-       " {'y': 5329, 'index': 6, 'pid': 9130},\n",
-       " {'y': 441, 'index': 7, 'pid': 9131},\n",
-       " {'y': 324, 'index': 8, 'pid': 9132}]"
+       "[{'y': 100, 'index': 0, 'pid': 9100},\n",
+       " {'y': 121, 'index': 1, 'pid': 9103},\n",
+       " {'y': 529, 'index': 2, 'pid': 9104},\n",
+       " {'y': 1156, 'index': 3, 'pid': 9105},\n",
+       " {'y': 169, 'index': 4, 'pid': 9106},\n",
+       " {'y': 3025, 'index': 5, 'pid': 9107},\n",
+       " {'y': 5329, 'index': 6, 'pid': 9108},\n",
+       " {'y': 441, 'index': 7, 'pid': 9109},\n",
+       " {'y': 324, 'index': 8, 'pid': 9110}]"
       ]
      },
      "execution_count": 5,
@@ -127,7 +127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "105d55c20ca8437b8716b16c45102988",
+       "model_id": "fa33c12d1b4641bbbd5c2b30ff34eb28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,15 +164,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 9484},\n",
-       " {'y': 121, 'index': 1, 'pid': 9485},\n",
-       " {'y': 529, 'index': 2, 'pid': 9487},\n",
-       " {'y': 1156, 'index': 3, 'pid': 9486},\n",
-       " {'y': 169, 'index': 4, 'pid': 9488},\n",
-       " {'y': 3025, 'index': 5, 'pid': 9489},\n",
-       " {'y': 5329, 'index': 6, 'pid': 9490},\n",
-       " {'y': 441, 'index': 7, 'pid': 9491},\n",
-       " {'y': 324, 'index': 8, 'pid': 9492}]"
+       "[{'y': 100, 'index': 0, 'pid': 9460},\n",
+       " {'y': 121, 'index': 1, 'pid': 9461},\n",
+       " {'y': 529, 'index': 2, 'pid': 9462},\n",
+       " {'y': 1156, 'index': 3, 'pid': 9463},\n",
+       " {'y': 169, 'index': 4, 'pid': 9464},\n",
+       " {'y': 3025, 'index': 5, 'pid': 9465},\n",
+       " {'y': 5329, 'index': 6, 'pid': 9466},\n",
+       " {'y': 441, 'index': 7, 'pid': 9467},\n",
+       " {'y': 324, 'index': 8, 'pid': 9469}]"
       ]
      },
      "execution_count": 7,
@@ -193,20 +193,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21333096\n",
-      "21333097\n",
-      "21333098\n",
-      "21333100\n",
-      "21333101\n",
-      "21333103\n",
-      "21333104\n",
-      "21333106\n",
-      "21333107\n"
+      "job id 21358605 submitted\n",
+      "job id 21358606 submitted\n",
+      "job id 21358607 submitted\n",
+      "job id 21358608 submitted\n",
+      "job id 21358609 submitted\n",
+      "job id 21358610 submitted\n",
+      "job id 21358611 submitted\n",
+      "job id 21358612 submitted\n",
+      "job id 21358613 submitted\n"
      ]
     }
    ],
    "source": [
-    "%%moan --label baz -n 4 -i run_args -o y,index,pid --mode slurm\n",
+    "%%moan --label baz -n 4 -i run_args -o y,index,pid --mode slurm --scratch=/global/projectb/scratch/ryneches/undead\n",
     "import os\n",
     "import time\n",
     "\n",
@@ -216,21 +216,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(wait for jobs to finish)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
+     "ename": "TypeError",
+     "evalue": "Function takes at most 1 positional arguments (2 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-4e767147241d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbaz_output\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'output_pickle'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#print(baz_output)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Function takes at most 1 positional arguments (2 given)"
      ]
     }
    ],
    "source": [
-    "print(baz_output)"
+    "import pickle\n",
+    "\n",
+    "scratchpath = '/global/projectb/scratch/ryneches/undead'\n",
+    "\n",
+    "for p in baz_output :\n",
+    "    print( pickle.load( open( p['output_pickle']), 'rb' ) )\n",
+    "\n",
+    "#print(baz_output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
