example with (basic) slurm execution

--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -224,18 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Function takes at most 1 positional arguments (2 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-4e767147241d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbaz_output\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'output_pickle'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#print(baz_output)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Function takes at most 1 positional arguments (2 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'y': 100, 'index': 0, 'pid': 18034}\n",
+      "{'y': 121, 'index': 1, 'pid': 18025}\n",
+      "{'y': 529, 'index': 2, 'pid': 18024}\n",
+      "{'y': 1156, 'index': 3, 'pid': 18033}\n",
+      "{'y': 169, 'index': 4, 'pid': 18053}\n",
+      "{'y': 3025, 'index': 5, 'pid': 18026}\n",
+      "{'y': 5329, 'index': 6, 'pid': 18050}\n",
+      "{'y': 441, 'index': 7, 'pid': 18055}\n",
+      "{'y': 324, 'index': 8, 'pid': 18045}\n"
      ]
     }
    ],
@@ -245,7 +249,7 @@
     "scratchpath = '/global/projectb/scratch/ryneches/undead'\n",
     "\n",
     "for p in baz_output :\n",
-    "    print( pickle.load( open( p['output_pickle']), 'rb' ) )\n",
+    "    print( pickle.load( open( p['output_pickle'], 'rb' ) ) )\n",
     "\n",
     "#print(baz_output)"
    ]
