maybe write some notes

--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -55,6 +55,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes, you want your army of undead to walk in single file and stay close to home.\n",
+    "Use `local_serial` mode."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -120,6 +128,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Single file undead armies are mostly only useful for testing purposes.\n",
+    "If you want them to shamble along in parallel formation, but still stay\n",
+    "close to your Tower of Necromancy, use `local_parallel` mode."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -182,6 +199,15 @@
    ],
    "source": [
     "bar_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When it's time to turn your army of undead horrors loose on an unsuspecting\n",
+    "HPC, use `slurm` mode. Make sure you provide a scratch directory visible\n",
+    "to all the nodes."
    ]
   },
   {
@@ -253,13 +279,6 @@
     "\n",
     "#print(baz_output)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
